# ysv

./: .gitignore  Cargo.toml  README.md  build-examples.sh  sample
docs/: configuration.md  index.md  running.md  transformations.md
samples/: sample.yaml
samples/date/: input.csv  output.csv  ysv.yaml
samples/date-multiple/: input.csv  output.csv
samples/date-multiple-bad-luck/: input.csv  output.csv  ysv.yaml
samples/input-multiple/: input.csv  output.csv  ysv.yaml
samples/line-number/: input.csv  output.csv  ysv.yaml
samples/mismatch_extra_value/: input.csv  output.csv  ysv.yaml
samples/regex-replace/: input.csv  output.csv  ysv.yaml
samples/static-value/: input.csv  output.csv  ysv.yaml
samples/type-mismatch/: input.csv  output.csv  ysv.yaml
samples/uniformity/: input.csv  output.csv  ysv.yaml
samples/unknown-operation/: ysv.yaml
samples/variables/: input.csv  output.csv  variables.env  ysv.yaml
samples/vehicles/: input.csv  output.csv  ysv.yaml
src/: config.rs  lib.rs  main.rs  options.rs  printable_error.rs  transform.rs  transformer.rs  worker.rs  writer.rs
src/compile/: date.rs  input.rs  input_multiple.rs  mod.rs  models.rs  replace.rs
src/transform/: case.rs  date.rs  input.rs  mod.rs  models.rs  replace.rs
tests/: tests.rs
