[package]
name = "ysv"
version = "0.1.0"
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
linked-hash-map = { version = "0.5.3", features = ["serde_impl"]}
