[package]
name = "ysv"
version = "0.1.2"
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]
edition = "2018"
license = "MIT"
description = "YAML driven CSV formatter"
homepage = "https://ysv.rs"
repository = "https://github.com/anatoly-scherbakov/ysv"
documentation = "https://altaisoft.gitbook.io/ysv/"
readme = "README.md"
keywords = ["csv", "etl"]
categories = ["command-line-utilities"]
exclude = [
    "samples/*",
    "sample",
    "tests/*"
]


[dependencies]
csv = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
linked-hash-map = { version = "0.5.3", features = ["serde_impl"]}
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
